--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
